feat: New endpoint for create SASISOPA document
