# endpoints/endpoints.js
@@ -1,6 +1,4 @@
 
-'use-strict';
-
 const path = require('path');
 const express = require('express');
 const { check, validationResult } = require('express-validator/check');
@@ -58,22 +56,29 @@ router.get('/bc', [ check(['company', 'name', 'lastName', 'workPosition', 'phone
   }
 });
 
-router.get('/pdf', function(req, res) {
+router.get('/pdf',[ check(['stationId']).exists() ], function(req, res) {
   try {
-    const { fork } = require('child_process');
-    const process = fork(path.resolve(__dirname, 'endpoints', 'pdf.js'));
-    process.on('message', (data) => {
-      if(data.code === 200){
-        res.writeHead(data.code, {
-          'Content-Type': 'application/pdf',
-          'Content-disposition': 'attachment;filename=attached.pdf',
-        });
-        res.end(data.file, 'binary');
-      }else{
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      res.status(422).end(JSON.stringify(
+        {
+          code: 422,
+          description: 'Incomplete params, consult https://inspector-maplander-develop.appspot.com/endpoints/v1/api-docs'
+        }
+      ))
+    }else {
+      const { stationId, isSGM } = req.query;
+      const { fork } = require('child_process');
+      const process = fork(path.resolve(__dirname, 'endpoints', 'pdf.js'));
+      process.on('message', (data) => {
         res.status(data.code).end(JSON.stringify(data));
-      }
-    });
-    process.send(null);
+      });
+      const data = {
+        stationId: stationId,
+        isSGM: isSGM || false
+      };
+      process.send(data);
+    }
   }catch (e){
     console.error(e);
     res.status(500).end(JSON.stringify(
@@ -81,7 +86,7 @@ router.get('/pdf', function(req, res) {
         code: 500,
         description: 'Internal server error'
       }
-    ));
+    ))
   }
 });
 
